--- a/styles/prism-theme.css
+++ b/styles/prism-theme.css
@@ -15,6 +15,11 @@ pre::-webkit-scrollbar {
   height: 10px;
 }
 
+pre::-webkit-scrollbar-corner {
+  background: inherit;
+  border-radius: 10px;
+}
+
 pre::-webkit-scrollbar-track {
   background: inherit;
   border-radius: 10px;
@@ -62,10 +67,9 @@ code[class*="language-"] {
   -moz-hyphens: none;
   -ms-hyphens: none;
   hyphens: none;
-  overflow-x: auto;
   padding: 0;
   max-height: 75vh;
-  overflow-x: hidden !important;
+  /* overflow-x: hidden !important; */
 }
 
 .remark-highlight {
